# IoT

API_ESP/server/: client.ino  main.py  pyproject.toml
API_ESP/server/src/api/dto/requests/: AddTemperatureRequest.py
API_ESP/server/src/api/dto/responses/: AddTemperatureResponse.py  GetLocationsResponse.py  GetTemperatureResponse.py
API_ESP/server/src/api/routers/: location.py  temperature.py
API_ESP/server/src/config/: startup.py
API_ESP/server/src/data/: config.py
API_ESP/server/src/data/dbo/: TemperatureDbo.py
ButtonMatrix/: README.md
ButtonMatrix/main/: main.ino
ESP_API_MQTT_LEDS/API/: main.py  pyproject.toml
ESP_API_MQTT_LEDS/API/src/: auth_router.py  database.py  device_router.py  pixels_router.py
ESP_API_MQTT_LEDS/API/src/config/: setup.py
H-bridge/: README.md
H-bridge/main/: main.ino
LedCube/: main.ino
car_moving/: car_moving.ino  moving.h  states.h  values.h
